--- a/src/main/resources/static/script/tex/Head.tex
+++ b/src/main/resources/static/script/tex/Head.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper,oneside]{article}
-\usepackage[UTF8,adobefonts]{ctex}
+%\usepackage[UTF8,adobefonts]{ctex}
+\usepackage[UTF8]{ctex}
 
 \usepackage{wrapfig}
 \usepackage{indentfirst}
@@ -13,10 +14,6 @@
 \usepackage{xcolor}
 
 \usepackage{multirow}
-\usepackage{amssymb}
-\usepackage{graphicx}
-
-\usepackage{slashbox}
 
 \begin{document}
 \section*{五、实验数据处理}
